[gd_scene load_steps=34 format=3 uid="uid://bcdk43qj3bg31"]

[ext_resource type="FontFile" uid="uid://bga5ibesh7gv1" path="res://assets/fonts/PixelOperator8.ttf" id="1_dcu8g"]
[ext_resource type="StyleBox" uid="uid://fwy4inyybp0g" path="res://ressources/hover_button.tres" id="1_oun6v"]
[ext_resource type="StyleBox" uid="uid://dwp3kygr45ree" path="res://ressources/normal_button.tres" id="2_6vpr7"]
[ext_resource type="Script" path="res://script/control/control_main_page.gd" id="2_p63oh"]
[ext_resource type="PackedScene" uid="uid://b1bg60mvhfipn" path="res://scene/templates/terrarium_creature.tscn" id="2_u84gi"]
[ext_resource type="Script" path="res://script/control/control_options_page.gd" id="3_ey0g0"]
[ext_resource type="TileSet" uid="uid://c8ulupuday03y" path="res://misc/tres/tile_layer_map.tres" id="4_agfm4"]
[ext_resource type="PackedScene" uid="uid://coe2swrquye08" path="res://scene/volume_slider.tscn" id="4_cq6gf"]
[ext_resource type="Script" path="res://script/control/control_reset_page.gd" id="4_hyqrm"]
[ext_resource type="PackedScene" uid="uid://c0q6e7vdgcqhm" path="res://scene/templates/creature.tscn" id="5_asln8"]
[ext_resource type="Script" path="res://script/control/control_reset_done_page.gd" id="5_xu3of"]
[ext_resource type="Script" path="res://script/global/global_terrarium.gd" id="6_yeqnp"]
[ext_resource type="Script" path="res://script/gameplay/gameplay_main.gd" id="7_1selt"]
[ext_resource type="Script" path="res://script/global/global_backup.gd" id="8_314rx"]
[ext_resource type="Script" path="res://script/global/global_capture_cost.gd" id="9_myrhn"]
[ext_resource type="Script" path="res://script/global/global_money.gd" id="11_w4ogf"]
[ext_resource type="AudioStream" uid="uid://cqj4me3q2ct6p" path="res://assets/audio/discover.wav" id="12_p0hib"]
[ext_resource type="PackedScene" uid="uid://1qlckxv40dcb" path="res://scene/sounds.tscn" id="15_qr4p3"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_w3p7b"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_y8mcy"]
content_margin_left = 5.0
content_margin_top = 5.0
content_margin_right = 5.0
content_margin_bottom = 5.0
bg_color = Color(0.627451, 0.627451, 0.627451, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="Theme" id="Theme_c7tc1"]
default_font = ExtResource("1_dcu8g")
default_font_size = 24
Button/styles/focus = SubResource("StyleBoxEmpty_w3p7b")
Button/styles/hover = ExtResource("1_oun6v")
Button/styles/normal = ExtResource("2_6vpr7")
Button/styles/pressed = SubResource("StyleBoxFlat_y8mcy")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ipivb"]
content_margin_left = 5.0
content_margin_top = 5.0
content_margin_right = 5.0
content_margin_bottom = 5.0
bg_color = Color(1, 0, 0, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kqmt8"]
content_margin_left = 5.0
content_margin_top = 5.0
content_margin_right = 5.0
content_margin_bottom = 5.0
bg_color = Color(0.596078, 0, 0, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tm6sf"]
content_margin_left = 5.0
content_margin_top = 5.0
content_margin_right = 5.0
content_margin_bottom = 5.0
bg_color = Color(0.247059, 0, 0, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="Theme" id="Theme_7ejk6"]
Button/styles/hover = SubResource("StyleBoxFlat_ipivb")
Button/styles/normal = SubResource("StyleBoxFlat_kqmt8")
Button/styles/pressed = SubResource("StyleBoxFlat_tm6sf")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_oqb4s"]
content_margin_left = 5.0
content_margin_top = 5.0
content_margin_right = 5.0
content_margin_bottom = 5.0
bg_color = Color(0, 1, 0, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vq6sk"]
content_margin_left = 5.0
content_margin_top = 5.0
content_margin_right = 5.0
content_margin_bottom = 5.0
bg_color = Color(0, 0.662745, 0, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1kee4"]
content_margin_left = 5.0
content_margin_top = 5.0
content_margin_right = 5.0
content_margin_bottom = 5.0
bg_color = Color(0, 0.243137, 0, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="Theme" id="Theme_7vlbk"]
Button/styles/hover = SubResource("StyleBoxFlat_oqb4s")
Button/styles/normal = SubResource("StyleBoxFlat_vq6sk")
Button/styles/pressed = SubResource("StyleBoxFlat_1kee4")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_csvgy"]

[sub_resource type="Theme" id="Theme_mf8as"]
default_font = ExtResource("1_dcu8g")
default_font_size = 20
Button/styles/focus = SubResource("StyleBoxEmpty_csvgy")
Button/styles/hover = ExtResource("1_oun6v")
Button/styles/normal = ExtResource("2_6vpr7")

[sub_resource type="Gradient" id="Gradient_skmsb"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(0.831373, 0.768627, 0.67451, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_qy5wq"]
gradient = SubResource("Gradient_skmsb")

[node name="Main" type="Node2D"]

[node name="Général" type="Node2D" parent="."]

[node name="Main page" type="Node2D" parent="Général"]

[node name="Main" type="Camera2D" parent="Général/Main page" groups=["Cameras"]]
anchor_mode = 0

[node name="Control" type="Control" parent="Général/Main page/Main"]
layout_mode = 3
anchors_preset = 0
offset_left = 25.0
offset_top = 26.0
offset_right = 425.0
offset_bottom = 986.0
theme = SubResource("Theme_c7tc1")

[node name="Main page" type="Control" parent="Général/Main page/Main/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_p63oh")

[node name="Places" type="VBoxContainer" parent="Général/Main page/Main/Control/Main page"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -387.0
offset_bottom = 363.0
grow_horizontal = 2
grow_vertical = 2

[node name="Cloportes" type="Button" parent="Général/Main page/Main/Control/Main page/Places"]
layout_mode = 2
text = "Cloportes"

[node name="Fourmis" type="Button" parent="Général/Main page/Main/Control/Main page/Places"]
layout_mode = 2
text = "Fourmis"

[node name="Iules" type="Button" parent="Général/Main page/Main/Control/Main page/Places"]
layout_mode = 2
text = "Iules"

[node name="Araignees" type="Button" parent="Général/Main page/Main/Control/Main page/Places"]
layout_mode = 2
text = "Araignées"

[node name="Money" type="BoxContainer" parent="Général/Main page/Main/Control/Main page"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -210.0
offset_bottom = 40.0
grow_horizontal = 0

[node name="Coins label" type="Label" parent="Général/Main page/Main/Control/Main page/Money"]
layout_mode = 2
text = "Pièces: 500"

[node name="Move right" type="BoxContainer" parent="Général/Main page/Main/Control/Main page"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -40.0
offset_bottom = 40.0
grow_horizontal = 0
grow_vertical = 2
alignment = 1

[node name="Right" type="Button" parent="Général/Main page/Main/Control/Main page/Move right"]
custom_minimum_size = Vector2(50, 80)
layout_mode = 2
size_flags_horizontal = 8
text = ">"

[node name="Menu" type="VBoxContainer" parent="Général/Main page/Main/Control/Main page"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -138.0
grow_horizontal = 2
grow_vertical = 0

[node name="Capture" type="Button" parent="Général/Main page/Main/Control/Main page/Menu"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
text = "Capture"

[node name="Options" type="BoxContainer" parent="Général/Main page/Main/Control/Main page/Menu"]
layout_mode = 2

[node name="Options" type="Button" parent="Général/Main page/Main/Control/Main page/Menu/Options"]
layout_mode = 2
size_flags_horizontal = 3
text = "Options"

[node name="Quitter" type="Button" parent="Général/Main page/Main/Control/Main page/Menu/Options"]
layout_mode = 2
size_flags_horizontal = 3
text = "Quitter"

[node name="Option page" type="Control" parent="Général/Main page/Main/Control"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3_ey0g0")

[node name="Menu" type="VBoxContainer" parent="Général/Main page/Main/Control/Option page"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Reset save" type="Button" parent="Général/Main page/Main/Control/Option page/Menu"]
layout_mode = 2
size_flags_vertical = 0
text = "reset save"

[node name="Space" type="Label" parent="Général/Main page/Main/Control/Option page/Menu"]
layout_mode = 2

[node name="Master label" type="Label" parent="Général/Main page/Main/Control/Option page/Menu"]
layout_mode = 2
text = "Master volume"

[node name="Master slider" parent="Général/Main page/Main/Control/Option page/Menu" instance=ExtResource("4_cq6gf")]
layout_mode = 2
bus_name = "Master"

[node name="Music label" type="Label" parent="Général/Main page/Main/Control/Option page/Menu"]
layout_mode = 2
text = "Music volume"

[node name="Music slider" parent="Général/Main page/Main/Control/Option page/Menu" instance=ExtResource("4_cq6gf")]
layout_mode = 2
bus_name = "Music"

[node name="SFX label" type="Label" parent="Général/Main page/Main/Control/Option page/Menu"]
layout_mode = 2
text = "SFX volume"

[node name="SFX slider" parent="Général/Main page/Main/Control/Option page/Menu" instance=ExtResource("4_cq6gf")]
layout_mode = 2
bus_name = "SFX"

[node name="Home" type="Button" parent="Général/Main page/Main/Control/Option page/Menu"]
layout_mode = 2
size_flags_vertical = 10
text = "Home"

[node name="Reset page" type="Control" parent="Général/Main page/Main/Control"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("4_hyqrm")

[node name="VBoxContainer" type="VBoxContainer" parent="Général/Main page/Main/Control/Reset page"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Alerte" type="Label" parent="Général/Main page/Main/Control/Reset page/VBoxContainer"]
layout_mode = 2
text = "Attention, votre sauvegarde est sur le point d'être réinitialisé"
autowrap_mode = 3

[node name="HBoxContainer" type="HBoxContainer" parent="Général/Main page/Main/Control/Reset page/VBoxContainer"]
layout_mode = 2

[node name="Tout supprimer" type="Button" parent="Général/Main page/Main/Control/Reset page/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = SubResource("Theme_7ejk6")
text = "Tout supprimer"

[node name="Annuler" type="Button" parent="Général/Main page/Main/Control/Reset page/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = SubResource("Theme_7vlbk")
text = "Annuler
"

[node name="Reset done page" type="Control" parent="Général/Main page/Main/Control"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("5_xu3of")

[node name="Label" type="Label" parent="Général/Main page/Main/Control/Reset done page"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -12.0
offset_right = 20.0
offset_bottom = 12.0
grow_horizontal = 2
grow_vertical = 2
text = "Reset done ..."

[node name="Timer" type="Timer" parent="Général/Main page/Main/Control/Reset done page/Label"]
wait_time = 2.0
one_shot = true

[node name="Terrarium" type="Node2D" parent="Général"]
script = ExtResource("6_yeqnp")

[node name="Cloportes" type="Node2D" parent="Général/Terrarium"]

[node name="Porcellio scaber" parent="Général/Terrarium/Cloportes" instance=ExtResource("2_u84gi")]
position = Vector2(448, 0)

[node name="Armadillidium vulgare" parent="Général/Terrarium/Cloportes" instance=ExtResource("2_u84gi")]
position = Vector2(896, 0)

[node name="Trachelipus rathkii" parent="Général/Terrarium/Cloportes" instance=ExtResource("2_u84gi")]
position = Vector2(1344, 0)

[node name="Porcellio laevis" parent="Général/Terrarium/Cloportes" instance=ExtResource("2_u84gi")]
position = Vector2(1792, 0)

[node name="Armadillidium nasatum" parent="Général/Terrarium/Cloportes" instance=ExtResource("2_u84gi")]
position = Vector2(2240, 0)

[node name="Cylisticus convexus" parent="Général/Terrarium/Cloportes" instance=ExtResource("2_u84gi")]
position = Vector2(2688, 0)

[node name="Armadillidium klugii" parent="Général/Terrarium/Cloportes" instance=ExtResource("2_u84gi")]
position = Vector2(3136, 0)

[node name="Haplochromatosis" parent="Général/Terrarium/Cloportes" instance=ExtResource("2_u84gi")]
position = Vector2(3584, 0)

[node name="Armadillidium gestroi" parent="Général/Terrarium/Cloportes" instance=ExtResource("2_u84gi")]
position = Vector2(4032, 0)

[node name="Porcellio expansus" parent="Général/Terrarium/Cloportes" instance=ExtResource("2_u84gi")]
position = Vector2(4480, 0)

[node name="Porcellio magnificus" parent="Général/Terrarium/Cloportes" instance=ExtResource("2_u84gi")]
position = Vector2(4928, 0)

[node name="Titanillus draconis" parent="Général/Terrarium/Cloportes" instance=ExtResource("2_u84gi")]
position = Vector2(5376, 0)

[node name="Capture" type="Camera2D" parent="Général" groups=["Cameras"]]
position = Vector2(0, -1013)
anchor_mode = 0

[node name="Control" type="Control" parent="Général/Capture"]
layout_mode = 3
anchors_preset = 0
offset_left = 5.0
offset_top = 5.0
offset_right = 443.0
offset_bottom = 1008.0
theme = SubResource("Theme_mf8as")

[node name="Main page" type="Control" parent="Général/Capture/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("7_1selt")

[node name="Hint" type="Control" parent="Général/Capture/Control/Main page"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Hint button" type="TextureButton" parent="Général/Capture/Control/Main page/Hint"]
layout_mode = 0
offset_left = 187.0
offset_top = 187.0
offset_right = 251.0
offset_bottom = 251.0

[node name="Creature" type="Label" parent="Général/Capture/Control/Main page/Hint"]
visible = false
layout_mode = 0
offset_left = 59.0
offset_top = 248.0
offset_right = 379.0
offset_bottom = 315.0
text = "Creature"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Hint Panel" type="TextureRect" parent="Général/Capture/Control/Main page/Hint"]
visible = false
layout_mode = 1
offset_right = 307.0
offset_bottom = 128.0
texture = SubResource("GradientTexture2D_qy5wq")

[node name="Stamina" type="Label" parent="Général/Capture/Control/Main page"]
layout_mode = 1
offset_right = 327.0
offset_bottom = 24.0
text = "Coups restant: 10"

[node name="Timer" type="Timer" parent="Général/Capture/Control/Main page/Stamina"]
wait_time = 1.5
one_shot = true

[node name="Discover sound" type="AudioStreamPlayer" parent="Général/Capture/Control/Main page"]
stream = ExtResource("12_p0hib")
volume_db = 24.0
bus = &"SFX"

[node name="Game end page" type="Control" parent="Général/Capture/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Menu" type="HBoxContainer" parent="Général/Capture/Control/Game end page"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -14.5
offset_bottom = 14.5
grow_horizontal = 2
grow_vertical = 2

[node name="Rejouer" type="Button" parent="Général/Capture/Control/Game end page/Menu"]
layout_mode = 2
size_flags_horizontal = 3
text = "Rejouer"

[node name="Fin" type="Button" parent="Général/Capture/Control/Game end page/Menu"]
layout_mode = 2
size_flags_horizontal = 3
text = "Menu principal"

[node name="Tilemaps" type="Node2D" parent="Général/Capture"]

[node name="Background layer" type="TileMapLayer" parent="Général/Capture/Tilemaps"]
tile_map_data = PackedByteArray(0, 0, 1, 0, 5, 0, 0, 0, 3, 0, 0, 0, 0, 0, 5, 0, 5, 0, 0, 0, 5, 0, 0, 0, 0, 0, 1, 0, 9, 0, 0, 0, 3, 0, 2, 0, 0, 0, 5, 0, 9, 0, 0, 0, 5, 0, 2, 0, 0, 0)
tile_set = ExtResource("4_agfm4")

[node name="Creature layer" type="TileMapLayer" parent="Général/Capture/Tilemaps"]
tile_set = ExtResource("4_agfm4")

[node name="Foreground layer" type="TileMapLayer" parent="Général/Capture/Tilemaps"]
tile_set = ExtResource("4_agfm4")

[node name="Hint button layer" type="TileMapLayer" parent="Général/Capture/Tilemaps"]
tile_map_data = PackedByteArray(0, 0, 3, 0, 3, 0, 0, 0, 0, 0, 3, 0, 0, 0)
tile_set = ExtResource("4_agfm4")

[node name="Hint background layer" type="TileMapLayer" parent="Général/Capture/Tilemaps"]
visible = false
tile_set = ExtResource("4_agfm4")

[node name="Hint creature layer" type="TileMapLayer" parent="Général/Capture/Tilemaps"]
visible = false
tile_set = ExtResource("4_agfm4")

[node name="Global" type="Node2D" parent="Général"]
visible = false

[node name="Creatures" type="Node2D" parent="Général/Global"]
script = ExtResource("9_myrhn")

[node name="Cloportes" type="Node2D" parent="Général/Global/Creatures"]

[node name="Porcellio scaber" parent="Général/Global/Creatures/Cloportes" groups=["Creatures"] instance=ExtResource("5_asln8")]
sprite_position = Vector2i(0, 3)
pattern = [[1, 1, 1, 1]]

[node name="Armadillidium vulgare" parent="Général/Global/Creatures/Cloportes" groups=["Creatures"] instance=ExtResource("5_asln8")]
sprite_position = Vector2i(1, 3)
pattern = [[1], [1], [1], [1]]

[node name="Trachelipus rathkii" parent="Général/Global/Creatures/Cloportes" groups=["Creatures"] instance=ExtResource("5_asln8")]
sprite_position = Vector2i(2, 3)
pattern = [[1, 1], [1, 1]]

[node name="Porcellio laevis" parent="Général/Global/Creatures/Cloportes" groups=["Creatures"] instance=ExtResource("5_asln8")]
sprite_position = Vector2i(3, 3)
pattern = [[1, 0, 0, 0], [0, 1, 0, 0], [0, 0, 1, 0], [0, 0, 0, 1]]
coin_value = 2
rarity = "Peu_commun"

[node name="Armadillidium nasatum" parent="Général/Global/Creatures/Cloportes" groups=["Creatures"] instance=ExtResource("5_asln8")]
sprite_position = Vector2i(4, 3)
pattern = [[1, 1, 0], [0, 1, 1]]
coin_value = 2
rarity = "Peu_commun"

[node name="Cylisticus convexus" parent="Général/Global/Creatures/Cloportes" groups=["Creatures"] instance=ExtResource("5_asln8")]
sprite_position = Vector2i(5, 3)
pattern = [[1, 1, 1, 1]]
coin_value = 2
rarity = "Peu_commun"

[node name="Armadillidium klugii" parent="Général/Global/Creatures/Cloportes" groups=["Creatures"] instance=ExtResource("5_asln8")]
sprite_position = Vector2i(0, 4)
pattern = [[1], [1], [1]]
coin_value = 3
rarity = "Rare"

[node name="Haplochromatosis" parent="Général/Global/Creatures/Cloportes" groups=["Creatures"] instance=ExtResource("5_asln8")]
sprite_position = Vector2i(1, 4)
pattern = [[1, 1, 1]]
coin_value = 3
rarity = "Rare"

[node name="Armadillidium gestroi" parent="Général/Global/Creatures/Cloportes" groups=["Creatures"] instance=ExtResource("5_asln8")]
sprite_position = Vector2i(2, 4)
pattern = [[1, 1], [0, 1]]
coin_value = 3
rarity = "Epic"

[node name="Porcellio expansus" parent="Général/Global/Creatures/Cloportes" groups=["Creatures"] instance=ExtResource("5_asln8")]
sprite_position = Vector2i(3, 4)
pattern = [[1, 0], [0, 1], [0, 1]]
coin_value = 3
rarity = "Epic"

[node name="Porcellio magnificus" parent="Général/Global/Creatures/Cloportes" groups=["Creatures"] instance=ExtResource("5_asln8")]
sprite_position = Vector2i(4, 4)
pattern = [[1, 0, 0], [0, 1, 1]]
coin_value = 4
rarity = "Légendaire"

[node name="Titanillus draconis" parent="Général/Global/Creatures/Cloportes" groups=["Creatures"] instance=ExtResource("5_asln8")]
sprite_position = Vector2i(5, 4)
pattern = [[0, 1, 0], [1, 0, 1]]
coin_value = 4
rarity = "Mythique"

[node name="Sauvegarde" type="Node2D" parent="Général/Global"]
script = ExtResource("8_314rx")

[node name="Money" type="Node2D" parent="Général/Global"]
script = ExtResource("11_w4ogf")

[node name="Coin timer" type="Timer" parent="Général/Global/Money"]
autostart = true

[node name="Sounds" parent="Général/Global" instance=ExtResource("15_qr4p3")]

[connection signal="pressed" from="Général/Main page/Main/Control/Main page/Places/Cloportes" to="Général/Main page/Main/Control/Main page" method="_on_cloportes_pressed"]
[connection signal="pressed" from="Général/Main page/Main/Control/Main page/Places/Fourmis" to="Général/Main page/Main/Control/Main page" method="_on_fourmis_pressed"]
[connection signal="pressed" from="Général/Main page/Main/Control/Main page/Places/Iules" to="Général/Main page/Main/Control/Main page" method="_on_iules_pressed"]
[connection signal="pressed" from="Général/Main page/Main/Control/Main page/Places/Araignees" to="Général/Main page/Main/Control/Main page" method="_on_araignees_pressed"]
[connection signal="pressed" from="Général/Main page/Main/Control/Main page/Move right/Right" to="Général/Terrarium" method="_on_right_pressed"]
[connection signal="pressed" from="Général/Main page/Main/Control/Main page/Menu/Capture" to="Général/Main page/Main/Control/Main page" method="_on_capture_pressed"]
[connection signal="pressed" from="Général/Main page/Main/Control/Main page/Menu/Options/Options" to="Général/Main page/Main/Control/Main page" method="_on_options_pressed"]
[connection signal="pressed" from="Général/Main page/Main/Control/Main page/Menu/Options/Quitter" to="Général/Main page/Main/Control/Main page" method="_on_quitter_pressed"]
[connection signal="pressed" from="Général/Main page/Main/Control/Option page/Menu/Reset save" to="Général/Main page/Main/Control/Option page" method="_on_reset_save_pressed"]
[connection signal="pressed" from="Général/Main page/Main/Control/Option page/Menu/Home" to="Général/Main page/Main/Control/Option page" method="_on_home_pressed"]
[connection signal="pressed" from="Général/Main page/Main/Control/Reset page/VBoxContainer/HBoxContainer/Tout supprimer" to="Général/Main page/Main/Control/Reset page" method="_on_tout_supprimer_pressed"]
[connection signal="pressed" from="Général/Main page/Main/Control/Reset page/VBoxContainer/HBoxContainer/Annuler" to="Général/Main page/Main/Control/Reset page" method="_on_annuler_pressed"]
[connection signal="timeout" from="Général/Main page/Main/Control/Reset done page/Label/Timer" to="Général/Main page/Main/Control/Reset done page" method="_on_timer_timeout"]
[connection signal="pressed" from="Général/Capture/Control/Main page/Hint/Hint button" to="Général/Capture/Control/Main page" method="_on_hint_button_pressed"]
[connection signal="timeout" from="Général/Capture/Control/Main page/Stamina/Timer" to="Général/Capture/Control/Main page" method="_on_timer_timeout"]
[connection signal="pressed" from="Général/Capture/Control/Game end page/Menu/Rejouer" to="Général/Capture/Control/Main page" method="_on_rejouer_pressed"]
[connection signal="pressed" from="Général/Capture/Control/Game end page/Menu/Fin" to="Général/Capture/Control/Main page" method="_on_fin_pressed"]
[connection signal="timeout" from="Général/Global/Money/Coin timer" to="Général/Global/Money" method="_on_coin_timer_timeout"]
